--- a/build.gradle
+++ b/build.gradle
@@ -39,16 +39,20 @@ task mytest(type: Test){
             suites 'src/test/resources/add.xml'
         } else if (suite.equals('reg')){
             suites 'src/test/resources/reg.xml'
+        } else if (suite.equals('smoke')){
+            suites 'src/test/resources/smoke.xml'
         } else {
             suites'src/test/resources/testng.xml'
         }
-        if (suite.equals('smoke')) {
-            includes 'smoke'
-        }
+
+
 
     }
     if (project.hasProperty('browser')){
         systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')){
+        systemProperty 'target', "${target}"
     }
 
 }
